
* The link:../about/quick_start.adoc#getting-started[Getting started] guide references common tasks that get you started, as well as the _Troubleshooting guide_.

[#installation]
== Installation

See link:../install/install_connected.adoc#installing-while-connected-online[Installing while connected online] for more information.

[#cluster-management]
== Cluster management

* new 2.1: * Create clusters on the VMware vSphere service provider.
You can now provision and manage {ocp} clusters on the VMware vSphere Kubernetes cloud service provider.

See link:../manage_cluster/create_vm.adoc#creating-a-cluster-on-vmware-vsphere[Creating a cluster on VMware vSphere] for more information. 

[#application-management]
== Application management

{product-title} application managment improved usability with console configuration for managing resources. You can now create an application with supported channels in the console, edit YAML, configure secret settings, and more. See link:../manage_applications/app_resources.adoc#managing-application-resources[Managing application resources].

{product-title} is now integrated with Ansible Tower so that you can deploy and manage Ansible jobs from the console. You can also view the job status in the _Resource topology_.

For all the application management changes and improved documentation, see link:../manage_applications/app_management_overview.adoc#managing-applications[Managing applications].

[#security-and-compliance]
== Security and compliance

{product-title} supports several roles and uses Kubernetes authorization mechanisms. For more information, see link:../security/rbac.adoc#role-based-access-control[Role-based access control]. 

With the Governance and risk dashboard, you can view and manage the number of security risks and policy violations in your clusters and applications.


See link:../security/grc_intro.adoc#governance-and-risk[Governance and risk] to learn more about the dashboard and the policy framework.
