@@ -40,7 +40,8 @@ This is a service that should not be accessed directly.
 
 [#default-enabled-hub-cluster-components]
 == Default enabled hub cluster components
-
+// do we need to add multicluster-obeservability-operator? Currently, i doc'ed that the service is disabled by default
+//should we create a new section for services that are disabled by default?
 |===
 | Service | Description (needed) | Required
 
