@@ -3,14 +3,12 @@
 
 Learn more about console components that you can use to view, manage, or customize your console. 
 
-[#red-hat-advanced-cluster-management-for-kubernetes-console-components]
-== Red Hat Advanced Cluster Management for Kubernetes console components
-
 See the following image of the _Navigation_ from the {product-title} console, which is decsribed in more detail later in each section. See that the navigation represents major production function.
 
 image:../images/nav-2.0.png[Navigation]
 
-{product-title} console components:
+[#console-components]
+== Console components
 
 * <<access-your-console,Access your console>>
 * <<welcome-page,Welcome page>>
@@ -42,73 +40,43 @@ oc get routes -n <namespace-from-install>
 == Welcome page
 
 From the {product-title} Welcome page, you get more information about the product and you can access header features, such as _Search_ and _Create resource_.
-When you select _Create resource_, you can create a YAML file or JSON file for a deployment.
-Also from the _Header_, you can click the *Help* (?) icon to view the _About_ page and the documentation.
-From the _User_ menu, you can access the _Configure Client_ page.
-Additionally, you can access the xref:../console/vwt_search.adoc#searching-with-visual-web-terminal[Visual Web Terminal] from the header.
+When you select _Create resource_, you can create a YAML file or JSON file for a deployment. Also from the _Header_, you can click the *Help* (?) icon to view the _About_ page and the documentation. From the _User_ menu, you can access the _Configure Client_ page. Additionally, you can access the xref:../console/vwt_search.adoc#searching-with-visual-web-terminal[Visual Web Terminal] from the header.
+
 
 [#observe-environment-details]
 == Observe environment details
 
-You can view the following information about your clusters on the Overview dashboard:
+You can manage cluster and pod information by using dashboard to view the information. For more details, see xref:../console/observe_intro.adoc[Observing environments].
 
-* Cluster, node, and pod counts across all clusters and for each provider
-* Cluster status
-* Cluster compliance
-* Pod status
-
-Many elements on the dashboard can be clicked to open a search for related resources.
-Click on a provider card to view information for clusters from a single provider.
-You can personalize your view of the Overview dashboard by clicking and dragging to reorganize the cards.
 
 [#filtering-your-results]
 === Filtering your results
 
-You can personalize your view of the page by using the filtering feature.
-Click *Filter results* to specify what information is displayed on your page.
+You can personalize your view of the page by using the filtering feature. Click *Filter results* to specify what information is displayed on your page.
 
 [#automate-infrastructure]
 == Automate infrastructure
 
-Create clusters or import existing clusters.
-Scale up or down and delete clusters as needed.
-For more information, see link:../manage_cluster[Managing your clusters with {product-title}]
+Create clusters or import existing clusters. Scale up or down and delete clusters as needed. For more information, see link:../manage_cluster/intro.adoc#managing-your-clusters-with-red-hat-advanced-cluster-management-for-kubernetes[Managing your clusters with {product-title}].
 
 [#manage-applications]
 == Manage applications
 
-Click *New application* to edit a `.yaml` file and create your application.
-Click Resources to view the information of each application.
-For more information about application resources, see link:../manage_applications[Managing applications].
+Click *New application* to edit a `.yaml` file and create your application. Click *Overview* and *Advanced configuration* to view the information of each application. For more information about application resources, see link:../manage_applications/app_management_overview.adoc#managing-applications[Managing applications].
 
 [#viewing-your-pod-health]
 === Viewing your pod health
 
 View the pod health for all of your clusters by expanding the Heatmap.
 
-Click *Show details* to view the map.
-The size of the color-coordinated boxes represents the number of nodes on your cluster.
-Hover your cursor over the box to view the response time of your cluster.
+Click *Show details* to view the map. The size of the color-coordinated boxes represents the number of nodes on your cluster. Hover your cursor over the box to view the response time of your cluster.
 
 [#topology-page]
 == Topology page
 
-The Topology page uses information from Weave Scope probe to display Kubernetes objects within a cluster.
-You can view hub cluster resources.
-As you configure managed clusters, you see more clusters in the Topology view.
-
-To reduce the graphics on the page, you can filter the view by Clusters, Namespaces, and Labels.
-You can also filter the design by selecting the icon that represents the Kubernetes objects.
-
-Learn more about the tabs that are available from the Topology page:
-
-* Clusters: You can monitor your cluster network, object network, and security policies in a graphical format.
-View your hub clusters, all your managed clusters, and monitor security violations.
-* Policies: View the policy, policy placement, and clusters that are being validated.
-Check for violations for the selected policy.
+Use the Topology page to display Kubernetes objects and associated objects within a cluster. For more information, see the link:../observability/observe_intro.adoc#topology-page[Topology page section] in _Observing environments_.
 
 [#governance-and-risk-dashboard]
 == Governance and risk dashboard
 
-Use the Governance and risk dashboard to create and manage policies and policy controllers.
-For more information, see link:../security[Governance and risk].
+Use the Governance and risk dashboard to create and manage policies and policy controllers. For more information, see link:../security/grc_intro.adoc[Governance and risk].
