@@ -1,0 +1,10 @@
+<productname>{product-title}</productname>
+<productnumber>{product-version}</productnumber>
+<subtitle>Observing environments</subtitle>
+<abstract>
+    <para>Observe environments in {product-title}</para>
+</abstract>
+<authorgroup>
+    <orgname>{product-title} Team</orgname>
+</authorgroup>
+<xi:include href="Common_Content/Legal_Notice.xml" xmlns:xi="http://www.w3.org/2001/XInclude" />
