@@ -1,0 +1,6 @@
+include::modules/common-attributes.adoc[]
+
+= Observing environments
+
+include::observe_intro.adoc[leveloffset=+1]
+include::observability_install.adoc[leveloffset=+2]
