@@ -1,0 +1,48 @@
+[#install-observability]
+= Install observability service
+
+Monitor the health of your managed clusters with the observability service (`multicluster-observability-operator`). 
+
+//statement from issue 5141; note from Brandi (what are they to collect? Mustgather doc is written for them to just collect logs so we may want to mention here what they need to collect?
+
+*Required access:* //cluster admin?
+
+Collect information for observability resources with the `must-gather` command. For more information, see the _Must-gather_ section in the link:../troubleshooting/troubleshooting_intro.adoc[Troubleshooting documentation].
+
+[#enablement-for-observability]
+== Enablement for observability
+
+Enable or disbale the observability service by creating a `multicluster-observability` CRD. Only admin users can create the `multicluster-observability` CRD. 
+
+*Prerequisites*:
+
+* You must install Grafana. For more information, see https://grafana.com/docs/grafana/latest/installation/[Install Grafana].
+* You must have data storage. Observability supports different types of storage solutions, such as Thanos. For more information, see  _Object Storage_ in the https://thanos.io/tip/thanos/storage.md/#configuration[Thanos documentation]. 
+// should we list the OCP is required? I think it is safe to assume here. NOTE from Brandi, I think we should tell them: hub cluster, is a managed cluster also required?
+
+Complete the following steps to enable the observability service: 
+
+. Log in to your hub cluster from the command line interface (CLI). //Log in to OCP or RHACM? It is two different logins.
+. Create a namespace for the observability service with the following commad:
+
+  ----
+  oc create namespace open-cluster-management-observability
+  ---
+
+. Generate a pull-secret for the `observability` namespace by running the following command:
+
+  ----
+  oc get secret multiclusterhub-operator-pull-secret -n open-cluster-management --export -o yaml |   kubectl apply --namespace=open-cluster-management-observability -f -
+  ----
+
+. Create a secret for your object storage. You must first create object storage. //Maybe these are two steps? or something like: If you already created object storage, create a secret for that object storage. 
+
+
+
+//still working to add steps
+
+[#uninstall-observability]
+== Uninstall observability
+
+//5236
+
