@@ -22,6 +22,8 @@ You can now provision and manage {ocp} clusters on the VMware vSphere Kubernetes
 
 See link:../manage_cluster/create_vm.adoc#creating-a-cluster-on-vmware-vsphere[Creating a cluster on VMware vSphere] for more information. 
 
+* You can now install the observability service (`multicluster-observability-operator`) to monitor and optimize the health of your managed clusters. You can view the collected data and logs from Grafana dashboards. For more information see, link:../observability/observe_intro.adoc[Observing environments].
+
 [#application-management]
 == Application management
 
